# plex-tvdb-alt-orderer

./: .gitignore  README.md
package/: LICENSE  README.md  pyproject.toml
package/src/plex_tvdb_alt_orderer/: main.py
